Update per stylua

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -28,5 +28,6 @@ jobs:
       - name: Lint with stylua
         uses: JohnnyMorganz/stylua-action@v2
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           version: latest
           args: --check .
