--- a/config.yaml
+++ b/config.yaml
@@ -44,14 +44,14 @@ tools:
 #   - configure_command: Command for configuring tools (optional)
 configure:
   - name: "neovim"
-    config_url: "https://github.com/XiaoConstantine/nvim_lua_config/init.vim"
+    config_url: "https://github.com/XiaoConstantine/nvim_lua_config/blob/master/init.lua"
     install_path: "~/.config/nvim/init.vim"
   - name: "alacritty"
-    config_url: "https://github.com/XiaoConstantine/nvim_lua_config/alacritty.toml"
+    config_url: "https://github.com/XiaoConstantine/nvim_lua_config/blob/master/alacritty.toml"
     install_path: "~/.config/alacritty.toml"
   - name: "tmux"
-    config_url: "https://github.com/XiaoConstantine/nvim_lua_config/.tmux.conf"
+    config_url: "https://github.com/XiaoConstantine/nvim_lua_config/blob/master/.tmux.conf"
     install_path: "~/.tmux.conf"
   - name: "git"
-    config_url: "https://github.com/XiaoConstantine/nvim_lua_config/.gitconfg"
+    config_url: "https://github.com/XiaoConstantine/nvim_lua_config/blob/master/.gitconfig"
     install_path: "~/.gitconfig"
